fix contrast of disabled inputs

--- a/src/main/resources/scss/_variables.scss
+++ b/src/main/resources/scss/_variables.scss
@@ -17,6 +17,8 @@ $tertiary-grey: #b8b8b8;
 $tertiary-grey-alt: #d1d1d1;
 $quad-grey: #f8f8f8;//f9f9f9
 
+$cursor-default-value: $secondary-grey;
+$input-disabled-cursor: $cursor-default-value;
 $input-placeholder-font-color: rgba($tertiary-grey, 0.8);
 
 $disabled-button-border: #d0d0d0;
