--- a/src/main/resources/scss/common/components/_forms.scss
+++ b/src/main/resources/scss/common/components/_forms.scss
@@ -25,7 +25,7 @@ textarea {
 
 	&[readonly] {
 		background: none;
-		color: $tertiary-grey;
+		color: $secondary-grey;
 	}
 }
 
